# MyPlaner

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirments.txt
alembic/: env.py
alembic/versions/: 16b2467a0f62_fixed_task_tag_relationship_part_4.py  3c43d7b35bd5_fixed_task_tag_relationship_part_2.py  3c94c80e95e6_init.py  679508f97d99_fixed_task_tag_relationship_part_3.py  9f911aaf25d7_fixed_task_tag_relationship.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  tags.py  tasks.py  user.py
src/: main.py  requirments
src/api/: dependencies.py  routers.py  tag.py  task.py
src/auth/: auth.py  manager.py
src/config/: config.py
src/db/: db.py
src/models/: __init__.py  base.py  tags.py  task_tag_association.py  tasks.py  users.py
src/repositories/: tag.py  task.py
src/schemas/: tag.py  task.py  user.py
src/services/: tag.py  task.py
tests/: conftest.py  test_users.py
