[tool.poetry]
name = "myplaner"
version = "0.1.0"
description = ""
authors = ["Dmitry Grishin <kenpxrkasf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.109.2"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
